--- a/styles/GlobalStyles.css
+++ b/styles/GlobalStyles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;700;800;900&display=swap');
 .rgb {
   color: aqua;
 }
@@ -50,7 +51,7 @@ body {
 }
 .buttonHome {
   color: white;
-  padding: .5% 1%;
+  padding: .5% .2%;
   font-size: 15px;
   max-width: fit-content;
   font-weight: 600;
