--- a/styles/GlobalStyles.css
+++ b/styles/GlobalStyles.css
@@ -4,17 +4,18 @@
 }
 body {
   padding: 2% 5%;
-  background-color:#08070b !important;
+  background-color:#08060cf1 !important;
+  
 }
 span {
   color: white!important;
 }
 .logo {
-  background-image: linear-gradient(135deg, #80ecff, #d502ff);
+  background-image: linear-gradient(25deg, #ff8080, #7105ff);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -44,7 +45,7 @@ background-color: #181717e8!important;
 }
 .gradient {
   /* Primeiro passo: definir um degradê como fundo */
-  background-image: linear-gradient(135deg, #80ecff, #d502ff);
+  background-image: linear-gradient(115deg, #ff8080, #7105ff);
   
   /* Segundo passo: apagar do fundo tudo que não estiver imediatamente atrás de texto */
   background-clip: text;
