--- a/styles/GlobalStyles.css
+++ b/styles/GlobalStyles.css
@@ -58,7 +58,21 @@ background-color: #181717e8!important;
   color: black;
   
 }
+.gradientApiGit {
+  /* Primeiro passo: definir um degradê como fundo */
+  background-image: linear-gradient(115deg, #80d7ff, #05ff50);
+  
+  /* Segundo passo: apagar do fundo tudo que não estiver imediatamente atrás de texto */
+  background-clip: text;
+  -webkit-background-clip: text; /* Alguns navegadores precisam do prefixo */
 
+  /* Terceiro passo: apagar o texto, deixando apenas o fundo atrás dele */
+  -webkit-text-fill-color: transparent;
+
+  /* Cor que contraste com o degradê, caso o navegador não suporte `background-clip: text` */
+  color: black;
+  
+}
 
 .gradientMobile {
   /* Primeiro passo: definir um degradê como fundo */
